Implemented Next.JS Frontend

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "sanity start",
     "build": "sanity build",
     "deploy": "sanity deploy",
-    "deploy-graphql": "sanity graphql deploy"
+    "deploy-graphql": "sanity graphql deploy",
+    "dev:all": "concurrently \"npm run dev\" \"npm run dev --prefix frontend\""
   },
   "keywords": [
     "sanity"
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@sanity/eslint-config-studio": "^5.0.2",
     "@types/react": "^19.1",
+    "concurrently": "^9.2.1",
     "eslint": "^9.28",
     "prettier": "^3.5",
     "typescript": "^5.8"
